// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse demo -- collapse 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c10 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c12 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c14 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c6 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c6:hover {
  border-color: #4683e6;
}

.c6 .c13 {
  width: 20px;
  height: 20px;
}

.c6 .c15 {
  left: 13px;
  height: 10px;
}

.c6 .c9,
.c6 .c11 {
  line-height: 16px;
}

.c6 .c9 {
  padding-right: 20px;
}

.c6 .c11 {
  padding-left: 20px;
}

.c6 .c7 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c6 .c13 {
  left: 49px;
}

.c6 .c15 {
  background: #9fecc0;
}

.c6 .c11 {
  display: none;
}

.c19 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c20 {
  margin-right: 8px;
  color: #4074e1;
}

.c21 {
  margin-right: 8px;
  color: #6b798e;
}

.c17 .c18 {
  margin-right: 8px;
}

.c17 .c18:last-child {
  margin-right: 0;
}

.c27 {
  position: relative;
}

.c29 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c29::-webkit-input-placeholder {
  color: #abb4c3;
}

.c29::-moz-placeholder {
  color: #abb4c3;
}

.c29:-ms-input-placeholder {
  color: #abb4c3;
}

.c29::placeholder {
  color: #abb4c3;
}

.c24 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c26 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c22 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c22:hover {
  border-color: #4683e6;
}

.c22 .c28 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c22 .c23,
.c22 .c25 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c22 .c23:hover,
.c22 .c25:hover {
  color: #4074e1;
}

.c22 .c23 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c22 .c25 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        multiple
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c12"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        openKeys
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c17"
        >
          <span
            class="c18 c19"
          >
            <i
              checked=""
              class="icon__checkbox-ed c20 "
            />
            0
          </span>
          <span
            class="c18 c19"
          >
            <i
              class="icon__checkbox c21 "
            />
            1
          </span>
          <span
            class="c18 c19"
          >
            <i
              class="icon__checkbox c21 "
            />
            2
          </span>
          <span
            class="c18 c19"
          >
            <i
              class="icon__checkbox c21 "
            />
            3
          </span>
          <span
            class="c18 c19"
          >
            <i
              class="icon__checkbox c21 "
            />
            4
          </span>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        panelCount
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c22"
        >
          <div>
            <span
              class="c23 c24"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-up "
              />
            </span>
            <span
              class="c25 c26"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-down "
              />
            </span>
          </div>
          <div
            class="c27"
          >
            <input
              autocomplete="off"
              class="c28 c29"
              min="1"
              step="1"
              value="5"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        <div>
          panel 0
        </div>
        <div
          class=""
          open=""
        >
          content 0
        </div>
      </div>
      <div>
        <div>
          panel 1
        </div>
      </div>
      <div>
        <div>
          panel 2
        </div>
      </div>
      <div>
        <div>
          panel 3
        </div>
      </div>
      <div>
        <div>
          panel 4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- collapse-multiple 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        panel 1
      </div>
      <div
        class=""
        open=""
      >
        content 1
      </div>
    </div>
    <div>
      <div>
        panel 2
      </div>
      <div
        class=""
        open=""
      >
        content 2
      </div>
    </div>
    <div>
      <div>
        panel 3
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        panel 1
      </div>
    </div>
    <div>
      <div>
        panel 2
      </div>
      <div
        class=""
        open=""
      >
        content 2
      </div>
    </div>
    <div>
      <div>
        panel 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- collapse-uncontrolled 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        <div>
          panel 1
        </div>
      </div>
      <div>
        <div>
          panel 2
        </div>
        <div
          class=""
          open=""
        >
          content 2
        </div>
      </div>
      <div>
        <div>
          panel 3
        </div>
        <div
          class=""
          open=""
        >
          content 3
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        <div>
          panel 1
        </div>
      </div>
      <div>
        <div>
          panel 2
        </div>
        <div
          class=""
          open=""
        >
          content 2
        </div>
      </div>
      <div>
        <div>
          panel 3
        </div>
        <div
          class=""
          open=""
        >
          content 3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c10 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c12 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c14 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c6 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c6:hover {
  border-color: #4683e6;
}

.c6 .c13 {
  width: 20px;
  height: 20px;
}

.c6 .c15 {
  left: 13px;
  height: 10px;
}

.c6 .c9,
.c6 .c11 {
  line-height: 16px;
}

.c6 .c9 {
  padding-right: 20px;
}

.c6 .c11 {
  padding-left: 20px;
}

.c6 .c7 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c6 .c13 {
  left: 49px;
}

.c6 .c15 {
  background: #9fecc0;
}

.c6 .c11 {
  display: none;
}

.c17 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c17:hover {
  border-color: #4683e6;
}

.c17 .c13 {
  width: 20px;
  height: 20px;
}

.c17 .c15 {
  left: 13px;
  height: 10px;
}

.c17 .c9,
.c17 .c11 {
  line-height: 16px;
}

.c17 .c9 {
  padding-right: 20px;
}

.c17 .c11 {
  padding-left: 20px;
}

.c17 .c9 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        open
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          checked=""
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c12"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c17"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c12"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="2"
      >
        customTitle
      </div>
      <div
        class="c3 c5"
        span="10"
      >
        <div
          class="c17"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c12"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel title
      </div>
      <div
        class=""
        open=""
      >
        Content
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-customTitle 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  border-color: #c3cad9;
  background-color: #FFF;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c0:hover {
  color: #4074e1;
  border-color: #4683e6;
}

.c0[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

<div>
  <div>
    <div>
      <div
        style="border:1px solid #ccc;height:28px;line-height:28px;padding:10px;"
      >
        title
        <button
          class="c0"
          style="float:right;"
          type="button"
        >
          toggle
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-disabled 1`] = `
<div>
  <div>
    <div>
      Panel
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-forceRender 1`] = `
.c0 {
  display: none;
}

<div>
  <div>
    <div>
      Panel
    </div>
    <div
      class="c0"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-titlePosition 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel
      </div>
      <div
        class=""
        open=""
      >
        Content
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class=""
        open=""
      >
        Content
      </div>
      <div>
        Panel
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-uncontrolled 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel
      </div>
      <div
        class=""
        open=""
      >
        Content
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel
      </div>
      <div
        class=""
        open=""
      >
        Content
      </div>
    </div>
  </div>
</div>
`;
